# trilinos_experiments

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
plot/: analyse.ipynb  simple_plot.ipynb  test_initial_cond.ipynb
src/: gmg.cpp  gmg.hpp  hello_world.cpp  initialization.cpp  initialization.hpp  main.cpp  matrix.cpp  matrix.hpp  tpetra_types.hpp
